# Instance

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY-AUDIT.md  flake.nix
nix/: configuration.nix  fetch-artifacts.sh  fetch-manifest.sh  gpu-report.py  package.nix  pin-artifacts.sh
pinned/: apple_sign_in_jwks.json  artifacts.json  orchestrator_manage_pubkey.sec1
src/: apple_jwks.rs  attestation.rs  chat.rs  enroll.rs  lib.rs  main.rs  manage.rs  manifest.rs  mtls.rs  state.rs
tests/: chat.rs  enroll.rs  manage.rs  mtls.rs
tests/common/: mod.rs
